...

    </string-array>


    <string name="title_activity_cliente">Cliente</string>
    <string name="title_activity_add_cliente">Lista de Amigos</string>
    <string name="verificacion">Verificado</string>
    <string name="noverificacion">NoVerificado</string>

    <string name="facebook_app_id">259460414763089</string>
    <string name="facebook_login_protocol_scheme">fb259460414763089</string>


...
